# Gentari-LH2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Project/Kawasaki Heavy Industries/: Kawasakis_Hydrogen_Activities_2.md  Supplemental_Information_Comparison_btw_LH2_and_other_carriers_KHI2605_R0.md
data/: README.md  lh2-database.xlsx  references.csv
data/costs/: .gitkeep  lh2-cost-stack.csv
data/properties/: .gitkeep  lh2-properties.csv  liquefaction.csv  regas.csv  terminals.csv
data/vessels/: .gitkeep  lh2-carriers.csv
docs/: conventions.md  glossary.md  memory.md  okr.md
docs/comparison/: 00-milestones.md  milestones.xlsx
docs/methodology/: 00-overview.md  01-production.md  02-liquefaction.md  03-storage.md  04-shipping.md  05-regas.md  06-enduse.md
notebooks/: README.md
scripts/: build_db_workbook.py
sources/raw/: .gitkeep
sources/raw/Project/Kawasaki Heavy Industries/: Comparison_btw_LH2_and_other_carriers_KHI2604_R1.md  KHI_Gentari_Liquid_H2_Questionnaire_20260220_KHI_reply0304.md  KHI_Gentari_Liquid_H2_Questionnaire_20260220_KHI_reply0331_GHSB20260406.md
src/lh2/: __init__.py  economics.py  enduse.py  liquefaction.py  production.py  regas.py  shipping.py  storage.py  units.py
tests/: test_data_tables.py  test_smoke.py
