[project]
name = "lh2"
version = "0.1.0"
description = "Liquid Hydrogen (LH2) value-chain modeling and analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pint>=0.23",          # unit enforcement (shared registry in lh2.units)
    "numpy>=1.24",
    "pandas>=2.0",         # tabular data / references handling
    "numpy-financial>=1.0", # NPV / IRR for economics.py
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "jupyter>=1.0",        # scenario notebooks
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
